syntax = "proto3";
package bs.types;
option go_package ="mango/api/types";
//option go_package ="/types";

message ErrorInfo{
	int32	code = 1;
	string info = 2;
}

enum PropType{
	None	= 0;
	Score	= 1;
}

message PropItem{
	PropType	prop_id = 1;
	int64		prop_count = 2;
}

message BaseAppInfo{
	string			name = 1;
	uint32			type = 2;
	uint32			id = 3;
	uint32			version = 4;
}

message BaseUserInfo {
	enum UserType{
		UNKNOW = 0;	//未知
		Normal = 1;	//正常类型
		Robot = 10;	//机器人
	}
	string		account = 1;			//用户账号
	uint64   	user_id = 2;         	//用户ID 
	uint64   	game_id = 3;			//数字ID
	uint32		gender = 4;				//性别
	uint32		face_id = 5;			//头像id
	string		custom_face = 6;		//自定义的图像地址
	string		nick_name = 7;			//昵称
	UserType 	user_type = 8;			//用户类别
	repeated PropItem 	user_props = 9;			//用户道具
	uint32		market_id = 10;			//登录主渠道
	uint32		site_id = 11;         	//登录子渠道
	uint32		reg_market_id = 12;		//注册主渠道
	uint32		reg_site_id = 13;		//注册子渠道
	string		register_data = 14;   	//注册时间
	uint64 	gate_connid = 15; 		//关联的gate连接id
}

message UserRoomInfo{
	BaseUserInfo 	base_info = 1;				//基础信息
	uint64 		table_id = 2;				//所有桌子
	uint32 		seat_id = 3;	   			//所在位置
	uint32			user_state = 4;				//用户状态
	uint32			lost_count = 5;				//玩家总输局
	uint32			draw_count = 6;				//玩家总平局
  	uint32			win_count = 7;				//玩家总胜局		
}

message RoomInfo{
	enum RoomType{
		None	= 0;
		Gold	= 0x0001;	//金币
		Private = 0x0010;	//私有
		RedPack = 0x0020;	//红包
	}
	BaseAppInfo			app_info = 1;
	uint32					kind = 2;
	RoomType				type = 3;
	uint32					level = 4;
	string					name = 5;
	int64					base_score = 6;
	int64					join_min = 7;
	int64					join_max = 8;
	int64					out_score = 9;
	int64					win_limit = 10;
}